# esp32-intercom

./: .gitignore  CALLING_GUIDE.md  CMakeLists.txt  DOCUMENTATION.md  ESPHOME_INTEGRATION.md  INTEGRATION_GUIDE.md  MIGRATION.md  MIGRATION_STATUS.md  README.md  README_BUILD.md  README_ESPHOME.md  README_ESPIDF.md  WAVESHARE_HARDWARE.md  WEBRTC_INTEGRATION.md  esp32_intercom.ino  intercom.yaml  intercom_component.cpp  intercom_component.h  node-red-webrtc-signaling.json  sdkconfig.defaults  secrets.yaml.example
.github/workflows/: arduino-lint.yml
components/: README.md
docs/: HARDWARE.md  INTEGRATION.md
esphome/: intercom_waveshare.yaml
esphome/components/intercom/: CMakeLists.txt  INTEGRATION_STEPS.md  README.md  __init__.py  intercom.cpp  intercom.h
main/: CMakeLists.txt  audio_codec.c  audio_handler.c  intercom_app.c  main.c  signaling_client.c
main/include/: audio_codec.h  audio_handler.h  intercom_app.h  signaling_client.h
